--- a/luci-app-echworkers/po/zh_Hans/echworkers.po
+++ b/luci-app-echworkers/po/zh_Hans/echworkers.po
@@ -111,3 +111,84 @@ msgstr "TPROXY 端口"
 
 msgid "Local port for transparent proxy"
 msgstr "透明代理本地端口"
+
+msgid "GFW List Management"
+msgstr "GFW 列表管理"
+
+msgid "Enable GFW List"
+msgstr "启用 GFW 列表"
+
+msgid "Use GFW domain list for DNS anti-pollution"
+msgstr "使用 GFW 域名列表进行 DNS 防污染"
+
+msgid "List Source"
+msgstr "列表源"
+
+msgid "Select GFW list download source"
+msgstr "选择 GFW 列表下载源"
+
+msgid "GFWList (Gitee China Mirror)"
+msgstr "GFWList (Gitee 国内镜像)"
+
+msgid "Custom URL"
+msgstr "自定义地址"
+
+msgid "Enter custom GFW list URL"
+msgstr "输入自定义 GFW 列表地址"
+
+msgid "Auto Update"
+msgstr "自动更新"
+
+msgid "Automatically update GFW list periodically"
+msgstr "定期自动更新 GFW 列表"
+
+msgid "Update Interval"
+msgstr "更新间隔"
+
+msgid "How often to update the GFW list"
+msgstr "GFW 列表更新频率"
+
+msgid "Every 6 hours"
+msgstr "每 6 小时"
+
+msgid "Every 12 hours"
+msgstr "每 12 小时"
+
+msgid "Every day"
+msgstr "每天"
+
+msgid "Every 3 days"
+msgstr "每 3 天"
+
+msgid "Every week"
+msgstr "每周"
+
+msgid "GFW List Status"
+msgstr "GFW 列表状态"
+
+msgid "Update Now"
+msgstr "立即更新"
+
+msgid "Refresh Status"
+msgstr "刷新状态"
+
+msgid "Loading..."
+msgstr "加载中..."
+
+msgid "Updating..."
+msgstr "更新中..."
+
+msgid "Update completed"
+msgstr "更新完成"
+
+msgid "Update failed: "
+msgstr "更新失败: "
+
+msgid "Unable to get status"
+msgstr "无法获取状态"
+
+msgid "GFW list script not found"
+msgstr "GFW 列表脚本未找到"
+
+msgid "GFWList (Gitee China Mirror)"
+msgstr "GFWList (Gitee 国内镜像)"
